--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     { "src": "server/index.js", "use": "@vercel/node" },
-    { "src": "client/vite.config.js", "use": "@vercel/static-build" }
+    { "src": "client/package.json", "use": "@vercel/static-build" }
   ],
   "routes": [
     { "src": "/api/(.*)", "dest": "server/index.js" },
