--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,4 @@
 {
-  "version": 2,
   "builds": [
     {
       "src": "server/index.js",
@@ -20,7 +19,7 @@
     },
     {
       "src": "/(.*)",
-      "dest": "client/dest/index.html"
+      "dest": "client/dist/$1"
     }
   ]
 }
