--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
+    "react-google-recaptcha": "^3.1.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
