--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.65.0",
     "react-icons": "^5.5.0",
+    "react-phone-number-input": "^3.4.14",
     "react-router-dom": "^7.6.2",
     "react-slick": "^0.30.3",
     "react-toastify": "^11.0.5",
