--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@editorjs/paragraph": "^2.11.7",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
@@ -33,6 +34,7 @@
     "chart.js": "^4.5.0",
     "chartjs-plugin-datalabels": "^2.2.0",
     "class-variance-authority": "^0.7.1",
+    "date-fns": "^4.1.0",
     "editorjs-html": "^4.0.5",
     "framer-motion": "^12.18.1",
     "lucide-react": "^0.516.0",
